--- a/pawnscape/minmax_for_mdp.ipynb
+++ b/pawnscape/minmax_for_mdp.ipynb
@@ -1,26 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyN50LnHVSsXSw5o/bIrA7Xw",
-      "include_colab_link": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/balaji2005/queens-gambit-soc/blob/main/pawnscape/minmax_for_mdp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -126,6 +110,23 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "b7_P6IiugZOF",
+        "outputId": "06f6ae28-ce3e-4f15-f4fc-a789d9c51586"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "-1\n"
+          ]
+        }
+      ],
       "source": [
         "board2 = [\n",
         "    ['B', 'B', 'B', 'B'],\n",
@@ -135,27 +136,27 @@
         "]\n",
         "state2 = State(board2, 'B')\n",
         "print(state2.value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "b7_P6IiugZOF",
-        "outputId": "06f6ae28-ce3e-4f15-f4fc-a789d9c51586"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "-1\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MmniNJMfhRSC",
+        "outputId": "d1e0672c-c70e-41c4-ef7c-72db2c413148"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "board = [\n",
         "    ['B', 'B', 'B', 'B'],\n",
@@ -165,27 +166,27 @@
         "]\n",
         "state = State(board, 'B')\n",
         "print(state.value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "MmniNJMfhRSC",
-        "outputId": "d1e0672c-c70e-41c4-ef7c-72db2c413148"
-      },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 34,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IoML3Japhex5",
+        "outputId": "28bcff20-f6a4-44ea-d514-3a96cdf88a8d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "board = [\n",
         "    ['B', 'B', 'B', '.'],\n",
@@ -196,30 +197,11 @@
         "\n",
         "state = State(board, 'W')\n",
         "print(state.value)"
-      ],
-      "metadata": {
-        "id": "IoML3Japhex5",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "28bcff20-f6a4-44ea-d514-3a96cdf88a8d"
-      },
-      "execution_count": 34,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(options)"
-      ],
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -227,22 +209,41 @@
         "id": "KHkxogAui1o-",
         "outputId": "f0f29399-a504-41e3-cdea-6adaf4e74c5d"
       },
-      "execution_count": 35,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "1425"
             ]
           },
+          "execution_count": 35,
           "metadata": {},
-          "execution_count": 35
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(options)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 37,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mjWdNUdZ5USl",
+        "outputId": "8c22c1d2-4b64-4a2a-e877-2036493f5392"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "board = [\n",
         "    ['B', 'B', '.', 'B'],\n",
@@ -253,30 +254,11 @@
         "\n",
         "state = State(board, 'W')\n",
         "print(state.value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "mjWdNUdZ5USl",
-        "outputId": "8c22c1d2-4b64-4a2a-e877-2036493f5392"
-      },
-      "execution_count": 37,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(options)"
-      ],
+      "execution_count": 38,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -284,22 +266,41 @@
         "id": "ripdxd2G5VV3",
         "outputId": "525236c3-fc09-469e-94f0-ba0ceec7e61f"
       },
-      "execution_count": 38,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "2482"
             ]
           },
+          "execution_count": 38,
           "metadata": {},
-          "execution_count": 38
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(options)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 39,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "pjZfskQg5ltV",
+        "outputId": "bd41d83a-d2d4-43f0-cd93-7165d683c105"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "board = [\n",
         "    ['B', '.', 'B', 'B'],\n",
@@ -310,30 +311,11 @@
         "\n",
         "state = State(board, 'W')\n",
         "print(state.value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "pjZfskQg5ltV",
-        "outputId": "bd41d83a-d2d4-43f0-cd93-7165d683c105"
-      },
-      "execution_count": 39,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(options)"
-      ],
+      "execution_count": 40,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -341,22 +323,41 @@
         "id": "JM2eQlgc6xFh",
         "outputId": "11a77b98-c965-401a-9203-3f627dedc110"
       },
-      "execution_count": 40,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "3132"
             ]
           },
+          "execution_count": 40,
           "metadata": {},
-          "execution_count": 40
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(options)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 41,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9XfQqpWO61Xj",
+        "outputId": "ef5222ef-840e-4ab5-9053-ee4a947b420d"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n"
+          ]
+        }
+      ],
       "source": [
         "board = [\n",
         "    ['.', 'B', 'B', 'B'],\n",
@@ -367,30 +368,11 @@
         "\n",
         "state = State(board, 'W')\n",
         "print(state.value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "9XfQqpWO61Xj",
-        "outputId": "ef5222ef-840e-4ab5-9053-ee4a947b420d"
-      },
-      "execution_count": 41,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "1\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(options)"
-      ],
+      "execution_count": 44,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -398,51 +380,51 @@
         "id": "Ipaf1qP964no",
         "outputId": "92a566a0-6489-4f88-a410-b72cd4ae1e08"
       },
-      "execution_count": 44,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "3342"
             ]
           },
+          "execution_count": 44,
           "metadata": {},
-          "execution_count": 44
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(options)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {
+        "id": "M2Bo5Ufl69Um"
+      },
+      "outputs": [],
       "source": [
         "import json\n",
         "\n",
         "file = open('data.json', 'w')\n",
         "file.write(json.dumps(options))\n",
         "file.close()"
-      ],
-      "metadata": {
-        "id": "M2Bo5Ufl69Um"
-      },
-      "execution_count": 47,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!touch data.json"
-      ],
+      "execution_count": 45,
       "metadata": {
         "id": "kliwvyM37dtf"
       },
-      "execution_count": 45,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "!touch data.json"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "!pwd"
-      ],
+      "execution_count": 48,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -450,19 +432,38 @@
         "id": "Fk1Wg_Gx7jdW",
         "outputId": "f5ac9e79-4c92-4db3-9706-723271ad4102"
       },
-      "execution_count": 48,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content\n"
           ]
         }
+      ],
+      "source": [
+        "!pwd"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "eN50FMJB7wyY",
+        "outputId": "6aa6b90e-d7b2-41c5-ec87-0dae93b51ff0"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n"
+          ]
+        }
+      ],
       "source": [
         "board = [\n",
         "    ['B', 'B', 'B', 'B'],\n",
@@ -473,30 +474,11 @@
         "\n",
         "state = State(board, 'W')\n",
         "print(state.value)"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "eN50FMJB7wyY",
-        "outputId": "6aa6b90e-d7b2-41c5-ec87-0dae93b51ff0"
-      },
-      "execution_count": 50,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "0\n"
-          ]
-        }
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(white_options)"
-      ],
+      "execution_count": 51,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -504,25 +486,25 @@
         "id": "qYoos7UH1-3M",
         "outputId": "1d8e53b1-341c-45eb-c648-c9080657bcee"
       },
-      "execution_count": 51,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "5855"
             ]
           },
+          "execution_count": 51,
           "metadata": {},
-          "execution_count": 51
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(white_options)"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "len(black_options)"
-      ],
+      "execution_count": 52,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -530,22 +512,29 @@
         "id": "q6ZQAzzZ2lZc",
         "outputId": "7555b538-3264-4146-a2ce-ef5572e14f7e"
       },
-      "execution_count": 52,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "5565"
             ]
           },
+          "execution_count": 52,
           "metadata": {},
-          "execution_count": 52
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "len(black_options)"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 54,
+      "metadata": {
+        "id": "2DI2Qr5A2naL"
+      },
+      "outputs": [],
       "source": [
         "black = open('black-mdp.json', 'w')\n",
         "black.write(json.dumps(black_options))\n",
@@ -553,21 +542,33 @@
         "white = open('white-mdp.json', 'w')\n",
         "white.write(json.dumps(white_options))\n",
         "white.close()"
-      ],
-      "metadata": {
-        "id": "2DI2Qr5A2naL"
-      },
-      "execution_count": 54,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [],
+      "execution_count": null,
       "metadata": {
         "id": "7PEHddrn2zsN"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": []
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "authorship_tag": "ABX9TyN50LnHVSsXSw5o/bIrA7Xw",
+      "include_colab_link": true,
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.10.12"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
