--- a/Week4/Engine Testing.ipynb
+++ b/Week4/Engine Testing.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "import chess\n",
-    "from my_chess_engine import Engine"
+    "from Week5.my_chess_engine import Engine"
    ]
   },
   {
@@ -1237,7 +1237,7 @@
    "outputs": [],
    "source": [
     "# engine = Engine()\n",
-    "from my_chess_engine import Engine"
+    "from Week5.my_chess_engine import Engine"
    ]
   },
   {
